css/main.css
/* ... */
  button {font-family: "Raleway";}

  p {font-family: "Open Sans";}

  body {margin: 0px;
        padding: 0px;
        background-color: #8a86d2;}

@media screen and (max-width: 500px)

{

  header {background-size: cover;
          position: relative;
          background-image: linear-gradient(to bottom, #241d7d, #8c88d2);
          color: white;
          height: 683px;
          z-index:-2}

  .logo {display: flex;
         float: left;
         margin-top: 27px;
         margin-left: 25px;
         margin-bottom: 125px;}

  .registration {float: right;
                 margin-bottom: 125px;
                 margin-top: 27px;
                 color: #fcffff;}

  .registration__in {display: inline;
                     font-size: 12px;}

  .registration__up {display: inline;
                     margin-left: 17px;
                     margin-right: 23px;
                     padding: 5px 15px;
                     background: #06d79d;
                     font-size: 12px;}

  .main-header {display: flex;
                flex-flow: column nowrap;
                justify-content: center;
                align-items: center;
                width: 100%;}

  .main-header__column2, .features__flex-container,
  .features__flex-container_column2, .features__flex-container_column3 {display: flex;
                                                                        flex-flow: column nowrap;
                                                                        justify-content: center;
                                                                        align-items: center;
                                                                        width: 100%;}

  .features__intro {text-align: center;}

  .features__flex-container {display: flex;
                            flex-flow: column nowrap;
                            justify-content: center;
                            align-items: center;
                            width: 100%;}

  .main-header__hero {width: 197px;
                      height: 200px;
                      margin-bottom: 38px;}

  .main-header__text {margin: 0px 35px 37px 35px;
                      text-align: center;
                      color: #fcffff;}

  .main-header__btn {background-color: #06d79d;
                     border: none;
                     padding: 5% 15%;
                     color: #fcffff;}

 .features {height: 1980px;
            color: black;
            display: flex;
            align-items: center;
            flex-flow: column nowrap;}

 .features__phone {margin: 97px auto 49px auto;
                   width: 224px;
                   height: 203px;}

 .features__par {width: 80%;}

h3, h4 {color: #08053e;}

h4 {margin-bottom: 34px;
    margin-top: 49px;}

h3 {font-size: 24px;
    margin-top: 155px;
    width: 60%;
    margin-left: auto;
    margin-right: auto;}

.features {position: relative; height: 2200px; margin-bottom: -25px;}

.features:before {transform: skewY(8deg);
                  content: "";
                  position: absolute;
                  background-color: white;
                  width: 100%;
                  height: 100%;
                  left: 0;
                  top: 0%;
                  z-index: -1;}

.access {height: 150px;
         width: 100%;
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
         align-items: center;}

.features__par {color: #7f7f7f;}

.features__email {width: 80%;
                  height: 46px;
                  padding-left: 28px;
                  box-sizing: border-box;
                  border: 3px solid #eeeef0;}

.features__btn {width: 80%;
                height: 30%;
                background-color: #06d79d;
                color: white;
                margin-top: 16px;
                border: none;
                padding: 0px;
                margin-bottom: 0px;}

footer        {background-color: #07043b;
               color: white;
               padding-top: 200px;
               margin-top: 0px;
               position: absolute;
               z-index: -3;}

.flex-container {margin-left: 55px;}

.flex-container__telephone {margin-top: 53px;}

.flex-container__column2__receive {margin-right: 75px;}

.flex-container__gmail {margin-top: 17px;
                        margin-bottom: 87px;}

.flex-container1 {display: flex;
                  flex-flow: column nowrap;
                  width: 78%;}

.flex-container1__email {height: 43px;
                         width: 100%;
                         border: none;
                         border-radius: 5px;
                         margin-bottom: 13px;
                         padding-left: 28px;
                         box-sizing: border-box;}

.flex-container1__button {height: 43px;
                          width: 55%;
                          background-color: #06d79d;
                          border: none;
                          color: white;
                          margin-bottom: 84px;
                          align-self: flex-end;}

.heading-bottom {font-weight: 700;
                 margin-top: 55px;
                 color: #white;}

.heading-bottom-initial {margin-top: 0px;}

.heading-bottom__final {margin-bottom: 111px;}

}
/* ... */

